test/good/automatic/extension/array/without_input/ret_zero/0010.lat
int main() {
    int[] a = new int[3];
    for(int b : a) {
      int c = 10;
      {
        int b = 20;
        c = b;
      }
      printInt(c);
    }
    return 0;
}
